# src/main/java/com/syht/vaultapp/web/rest/SeriesResource.java
@@ -2,29 +2,37 @@ package com.syht.vaultapp.web.rest;
 
 import com.syht.vaultapp.api.controller.SeriesApi;
 import com.syht.vaultapp.api.model.SeriesDTO;
+import com.syht.vaultapp.service.SeriesService;
+import java.net.URI;
+import java.util.List;
 import org.springframework.http.ResponseEntity;
 
-import java.util.List;
-
 public class SeriesResource implements SeriesApi {
+
+    private final SeriesService seriesService;
+
+    public SeriesResource(final SeriesService pSeriesService) {
+        seriesService = pSeriesService;
+    }
 
     /**
      * POST /series : Create a new series
      * Adds a new series to the database.
      *
-     * @param seriesDTO Series object to be created (required)
+     * @param pSeriesDTO Series object to be created (required)
      * @return Series created successfully (status code 201)
      * or Invalid series data (status code 400)
      * or Internal server error (status code 500)
      */
     @Override
-    public ResponseEntity<SeriesDTO> createSeries(final SeriesDTO seriesDTO) {
-        return null;
+    public ResponseEntity<SeriesDTO> createSeries(final SeriesDTO pSeriesDTO) {
+        final SeriesDTO seriesDTO = seriesService.createSeries(pSeriesDTO);
+        return ResponseEntity.created(URI.create("/series/" + seriesDTO.getId())).body(seriesDTO);
     }
 
     /**
-     * DELETE /series/{id} : Delete a series
-     * Deletes a series by its unique identifier.
+     * DELETE /series/{id} : Delete an series
+     * Deletes an series by its unique identifier.
      *
      * @param id The ID of the series to delete (required)
      * @return Series deleted successfully (status code 204)
@@ -33,7 +41,10 @@ public class SeriesResource implements SeriesApi {
      */
     @Override
     public ResponseEntity<Void> deleteSeries(final Integer id) {
-        return null;
+        if (seriesService.deleteSeries(id)) {
+            return ResponseEntity.noContent().build();
+        }
+        return ResponseEntity.notFound().build();
     }
 
     /**
@@ -47,7 +58,7 @@ public class SeriesResource implements SeriesApi {
      */
     @Override
     public ResponseEntity<List<SeriesDTO>> getAllSeries(final Integer page, final Integer size) {
-        return null;
+        return ResponseEntity.ok(this.seriesService.getAllSeries(page, size));
     }
 
     /**
@@ -61,22 +72,30 @@ public class SeriesResource implements SeriesApi {
      */
     @Override
     public ResponseEntity<SeriesDTO> getSeriesById(final Integer id) {
-        return null;
+        final SeriesDTO seriesDTO = this.seriesService.getSeriesById(id);
+        if (seriesDTO != null) {
+            return ResponseEntity.ok(seriesDTO);
+        }
+        return ResponseEntity.notFound().build();
     }
 
     /**
-     * PUT /series/{id} : Update a series
+     * PUT /series/{id} : Update an series
      * Update the details of an existing series.
      *
-     * @param id        The ID of the series to update (required)
-     * @param seriesDTO Updated series object (required)
+     * @param id       The ID of the series to update (required)
+     * @param pSeriesDTO Updated series object (required)
      * @return Series updated successfully (status code 200)
      * or Invalid series data (status code 400)
      * or Series not found (status code 404)
      * or Internal server error (status code 500)
      */
     @Override
-    public ResponseEntity<Void> updateSeries(final Integer id, final SeriesDTO seriesDTO) {
-        return null;
+    public ResponseEntity<SeriesDTO> updateSeries(final Integer id, final SeriesDTO pSeriesDTO) {
+        final SeriesDTO seriesDTO = this.seriesService.updateSeries(id, pSeriesDTO);
+        if (seriesDTO != null) {
+            return ResponseEntity.ok(seriesDTO);
+        }
+        return ResponseEntity.notFound().build();
     }
 }
